Adding devDependencies to the package.json file

--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
       "express-session": "^1.17.1",
       "pg": "^8.11.3",
       "sequelize": "^6.33.0"
+    },
+    "devDependencies": {
+      "eslint": "^7.12.1",
+      "eslint-config-prettier": "^6.15.0",
+      "nodemon": "^3.1.0",
+      "prettier": "^2.1.2"
     }
   }
   
